fixes: search bar menu doesn't jump anymore when input changes, topnavbar menu done

--- a/frontend/src/assets/sass/black-dashboard/custom/_misc.scss
+++ b/frontend/src/assets/sass/black-dashboard/custom/_misc.scss
@@ -174,8 +174,8 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
   }
 }
 .modal.show .modal-dialog {
-  -webkit-transform: translate(0,12.5%);
-  transform: translate(0,12.5%);
+  -webkit-transform: translate(0,4rem);
+  transform: translate(0,4rem);
 }
 
 code {
